Fixed text overflow

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .calculator {
-    padding: 10px;
+    padding: 10px 10px 5px;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
@@ -24,8 +24,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    min-height: 23%;
-    max-height: 23%;
+    min-height: 80px;
+    max-height: 80px;
     padding: 5px;
     background-color: #343a40;
     border-radius: 8px;
@@ -35,7 +35,19 @@ body {
 .display-1 {
     display: flex;
     gap: 2px;
-    font-size: 25px;
+    font-size: 23px;
+}
+
+.display-1,
+.display-2 {
+    max-width: 295px;
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: clip;
+}
+
+.display-num1 {
+    padding-left: 5px;
 }
 
 .display-2 {
